gccida/c2/find_reloads
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:2928:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v31; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:2931:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v34; // r9d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:2932:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v35; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:2943:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v46; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:2958:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v61; // ebx 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:2971:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v74; // r15d 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:2990:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class *v93; // rax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:3018:4: error: expected ';' after expression
rtx v121; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:3018:5: error: use of undeclared identifier 'v121'
rtx v121; // rax 
    ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:3020:6: error: use of undeclared identifier 'v123'
rtx *v123; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:3036:6: error: use of undeclared identifier 'v139'
rtx *v139; // rcx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:3047:4: error: expected ';' after expression
rtx reg_note; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:3047:5: error: must use 'enum' tag to refer to type 'reg_note'
rtx reg_note; // rax 
    ^
    enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:3048:1: error: must use 'enum' tag to refer to type 'reg_class'
reg_class v151; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:3055:1: error: must use 'enum' tag to refer to type 'machine_mode'
machine_mode v158; // edi 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:3062:6: error: use of undeclared identifier 'v165'
rtx *v165; // rbx 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:3064:6: error: use of undeclared identifier 'k'
rtx *k; // rax 
     ^
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:3069:1: error: must use 'enum' tag to refer to type 'reload_type'
reload_type v172; // eax 
^
enum 
/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/reload.c:3071:4: error: expected ';' after expression
rtx v174; // rdx 
   ^
   ;
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O2/gcc-clang-O2/find_reloads/src/obj/reload.o] Error 1
